Enhance authentication page layout and styles; remove unused font link

--- a/auth/auth.html
+++ b/auth/auth.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-    <div>testing</div>
+    <div class="login-container">
+        <div class="heading-container">
+            <img src="../icons/wordwit-favicon.ico" alt="WordWits Logo" class="title-logo" />
+            <h1 class="title-heading">WordWits</h1>
+        </div>
+        <div class="auth-container">
+            <h2 class="auth-title">Login or create an account</h2>
+            <div class="auth-form-container">
+                <label for="email" class="auth-label">Email Address</label>
+                <div class="input-container">
+                    <input type="email" name="email"  id="email" autocomplete="email" class="auth-input" required />
+                    <button type="submit" class="continue-button">Continue</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
