Add create account button and update authentication title based on email input

--- a/auth/auth.html
+++ b/auth/auth.html
@@ -14,7 +14,7 @@
             <h1 class="title-heading">WordWits</h1>
         </div>
         <div class="auth-container">
-            <h2 class="auth-title">Login or create an account</h2>
+            <h2 class="auth-title js-auth-title">Login or create an account</h2>
             <div class="auth-form-container">
                 <label for="email" class="auth-label">Email Address</label>
                 <div class="input-container">
@@ -34,6 +34,7 @@
                             <button type="button" class="show-edit-button js-show-button">Show</button>
                         </div>
                     </div>
+                    <button type="submit" class="create-account-button js-create-account-button" id="hidden-create-account">Create Account</button>
                 </div>
             </div>
         </div>
