--- a/auth/auth.html
+++ b/auth/auth.html
@@ -34,7 +34,9 @@
                             <button type="button" class="show-edit-button js-show-button">Show</button>
                         </div>
                     </div>
+                    <a href="#" class="forgot-password-link js-forgot-password-link" id="hidden-forgot-password" target="_blank">Forgot your Password?</a>
                     <button type="submit" class="create-account-button js-create-account-button" id="hidden-create-account">Create Account</button>
+                    
                 </div>
             </div>
         </div>
