Implement "Forgot your Password?" functionality with email verification and update styles

--- a/auth/auth.html
+++ b/auth/auth.html
@@ -15,7 +15,7 @@
         </div>
         <div class="auth-container">
             <h2 class="auth-title js-auth-title">Login or create an account</h2>
-            <div class="auth-form-container">
+            <div class="auth-form-container js-auth-form-container">
                 <label for="email" class="auth-label">Email Address</label>
                 <div class="input-container">
                     <div class="email-container">
@@ -34,7 +34,7 @@
                             <button type="button" class="show-edit-button js-show-button">Show</button>
                         </div>
                     </div>
-                    <a href="#" class="forgot-password-link js-forgot-password-link" id="hidden-forgot-password" target="_blank">Forgot your Password?</a>
+                    <a class="forgot-password-link js-forgot-password-link" id="hidden-forgot-password" target="_blank">Forgot your Password?</a>
                     <button type="submit" class="create-account-button js-create-account-button" id="hidden-create-account">Create Account</button>
                     
                 </div>
