Add account creation handling and success message display

--- a/auth/auth.html
+++ b/auth/auth.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="error-message js-error-container" id="hidden">
                         <img src="../icons/exclamation-warning-round-red-icon.svg" alt="Error Icon" class="error-icon" type="image/svg+xml" />
-                        <span class="error-text">Please enter a valid email address.</span>
+                        <span class="error-text js-error-text">Please enter a valid email address.</span>
                     </div>
                     <button type="submit" class="continue-button js-continue-button">Continue</button>
                     <div class="password-container-validation js-password-container-validation" id="hidden-password">
