--- a/html/game.html
+++ b/html/game.html
@@ -46,8 +46,8 @@
         </menu>
     </section>
 
-    <div class="board">
-        
+    <div class="board-container">
+        <div class="board"></div>
     </div>
 </body>
 </html>
