Implement game board structure and styles, add dynamic row and tile generation

--- a/html/game.html
+++ b/html/game.html
@@ -47,7 +47,9 @@
     </section>
 
     <div class="board-container">
-        <div class="board"></div>
+        <div class="board js-board"></div>
     </div>
+
+    <script src="../scripts/game.js"> </script>
 </body>
 </html>
