Add keyboard container and styles for improved game interaction

--- a/html/game.html
+++ b/html/game.html
@@ -50,6 +50,12 @@
         <div class="board js-board"></div>
     </div>
 
+    <div class="keyboard-container">
+        <div class="keyboard">
+            
+        </div>
+    </div>
+
     <script src="../scripts/game.js"> </script>
 </body>
 </html>
