Add dynamic keyboard rows and keys for improved game interaction

--- a/html/game.html
+++ b/html/game.html
@@ -52,7 +52,9 @@
 
     <div class="keyboard-container">
         <div class="keyboard">
-            
+            <div  class="keyboard-row" id="row-one"></div>
+            <div  class="keyboard-row" id="row-two"></div>
+            <div  class="keyboard-row" id="row-three"></div>
         </div>
     </div>
 
