Add invalid entry notification for user feedback on submission errors

--- a/html/game.html
+++ b/html/game.html
@@ -48,7 +48,12 @@
 
     <div class="board-container">
         <div class="board js-board"></div>
+        <div class="invalid-entry-container js-invalid-entry-container">
+            <p class="invalid-entry js-inavalid-entry">Not in word list</p>
+        </div>
     </div>
+
+    
 
     <div class="keyboard-container">
         <div class="keyboard">
