--- a/html/game.html
+++ b/html/game.html
@@ -51,6 +51,10 @@
         <div class="invalid-entry-container js-invalid-entry-container">
             <p class="invalid-entry js-inavalid-entry">Not in word list</p>
         </div>
+        <!-- <div class="how-to-play-container js-how-to-play-container">
+
+        </div>    -->
+            
     </div>
 
     
