Add data attributes to example tiles and added flip animation for help modal

--- a/html/game.html
+++ b/html/game.html
@@ -82,39 +82,39 @@
                     <div class="examples-container js-examples-container">
                         <h3 class="examples-header">Examples</h3>
                         <div class="examples js-examples">
-                            <div class="row-tile example-row-tile">
-                                <div class="tile" id="example-tile">S</div>
-                                <div class="tile" id="example-tile">T</div>
-                                <div class="tile" id="example-tile">U</div>
-                                <div class="tile" id="example-tile">D</div>
-                                <div class="tile" id="example-tile">Y</div>
+                            <div class="row-tile example-row-tile" data-index="0">
+                                <div class="tile" id="example-tile" data-index="0">S</div>
+                                <div class="tile" id="example-tile" data-index="1">T</div>
+                                <div class="tile" id="example-tile" data-index="2">U</div>
+                                <div class="tile" id="example-tile" data-index="3">D</div>
+                                <div class="tile" id="example-tile" data-index="4">Y</div>
                             </div>
                             <p class="example-para">
-                                <strong>W</strong> is in the word and in the correct spot.
+                                <strong>S</strong> is in the word and in the correct spot.
                             </p>
                         </div>
-                        <div class="examples js-examples">
-                            <div class="row-tile example-row-tile">
-                                <div class="tile" id="example-tile">B</div>
-                                <div class="tile" id="example-tile">L</div>
-                                <div class="tile" id="example-tile">A</div>
-                                <div class="tile" id="example-tile">N</div>
-                                <div class="tile" id="example-tile">K</div>
+                        <div class="examples js-examples" >
+                            <div class="row-tile example-row-tile" data-index="1">
+                                <div class="tile" id="example-tile" data-index="0">B</div>
+                                <div class="tile" id="example-tile" data-index="1">L</div>
+                                <div class="tile" id="example-tile" data-index="2">A</div>
+                                <div class="tile" id="example-tile" data-index="3">N</div>
+                                <div class="tile" id="example-tile" data-index="4">K</div>
                             </div>
                             <p class="example-para">
-                                <strong>L</strong> is in the word, but in the wrong spot.
+                                <strong>A</strong> is in the word, but in the wrong spot.
                             </p>
                         </div>
                         <div class="exampls js-examples">
-                            <div class="row-tile example-row-tile">
-                                <div class="tile" id="example-tile">C</div>
-                                <div class="tile" id="example-tile">H</div>
-                                <div class="tile" id="example-tile">O</div>
-                                <div class="tile" id="example-tile">R</div>
-                                <div class="tile" id="example-tile">E</div>
+                            <div class="row-tile example-row-tile"  data-index="2">
+                                <div class="tile" id="example-tile" data-index="0">C</div>
+                                <div class="tile" id="example-tile" data-index="1">H</div>
+                                <div class="tile" id="example-tile" data-index="2">O</div>
+                                <div class="tile" id="example-tile" data-index="3">R</div>
+                                <div class="tile" id="example-tile" data-index="4">E</div>
                             </div>
                             <p class= "example-para">
-                                <strong>R</strong> is not in the word in any spot.
+                                <strong>E</strong> is not in the word in any spot.
                             </p>
                         </div>
                     </div>
