--- a/html/game.html
+++ b/html/game.html
@@ -51,6 +51,16 @@
         </section>
     
         <div class="board-container">
+            <div class="tooltip">
+                <p class="tooltip-feature-text"><strong>FEATURE</strong></p>
+                <button class="close-button tooltip-close-button" id="tool" type="button" aria-label="Close">
+                    <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height="15" viewBox="0 0 24 24" width="25" class="game-icon" data-testid="icon-close">
+                        <path fill="#f8f8f8" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"></path>
+                    </svg>
+                </button>
+                <h3 class="tooltip-header">Want a hint?</h3>
+                <p class="tooltip-para">Click on the hint button to get AI featured hints</p>
+            </div>
             <div class="board js-board"></div>
             <div class="invalid-entry-container js-invalid-entry-container">
                 <p class="invalid-entry js-inavalid-entry">Not in word list</p>
